--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>monkey-http</module>
         <module>monkey-cache</module>
         <module>monkey-idempotent</module>
+        <module>monkey-requestbody-cache-filter</module>
     </modules>
 
     <properties>
