--- a/monkey-async-task-manager/pom.xml
+++ b/monkey-async-task-manager/pom.xml
@@ -10,7 +10,7 @@
         <version>0.3.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>monkey-requestbody-cache-filter</artifactId>
+    <artifactId>monkey-async-task-manager</artifactId>
     <dependencies>
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -29,9 +29,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.2</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
