--- a/monkey-notification/pom.xml
+++ b/monkey-notification/pom.xml
@@ -9,13 +9,10 @@
         <artifactId>monkey-tool</artifactId>
         <version>0.3.1-SNAPSHOT</version>
     </parent>
-    
-    <artifactId>monkey-log</artifactId>
+
+    <artifactId>monkey-notification</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -28,22 +25,14 @@
             <version>1.2.74</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
+            <groupId>cn.zqmy</groupId>
+            <artifactId>monkey-http</artifactId>
+            <version>${monkey-tool.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>structlog4j</groupId>
-            <artifactId>structlog4j-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>structlog4j</groupId>
-            <artifactId>structlog4j-json</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -51,22 +40,19 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-api</artifactId>
-                    <groupId>org.apache.logging.log4j</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>log4j-to-slf4j</artifactId>
-                    <groupId>org.apache.logging.log4j</groupId>
-                </exclusion>
-            </exclusions>
+            <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+            <version>${dingtalk-service.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.zqmy</groupId>
+            <artifactId>monkey-async-task-manager</artifactId>
+            <version>${monkey-tool.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
