--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,18 @@
 
     <groupId>cn.zqmy</groupId>
     <artifactId>monkey-tool</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.3.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
     <modules>
+        <module>monkey-notification</module>
         <module>monkey-log</module>
         <module>monkey-http</module>
         <module>monkey-cache</module>
         <module>monkey-idempotent</module>
         <module>monkey-requestbody-cache-filter</module>
+        <module>monkey-async-task-manager</module>
     </modules>
 
     <properties>
@@ -43,7 +45,7 @@
         <mybatis.version>1.3.2</mybatis.version>
         <pagehelper.version>1.2.5</pagehelper.version>
         <druid.version>1.1.1</druid.version>
-        <monkey-tool.version>0.2.1-SNAPSHOT</monkey-tool.version>
+        <monkey-tool.version>0.3.1-SNAPSHOT</monkey-tool.version>
         <jetcache.latest.version>2.5.15</jetcache.latest.version>
         <dingtalk-service.version>1.0.1</dingtalk-service.version>
     </properties>
