--- a/monkey-core/pom.xml
+++ b/monkey-core/pom.xml
@@ -10,58 +10,51 @@
         <version>0.5.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>monkey-cache</artifactId>
+    <artifactId>monkey-core</artifactId>
     <dependencies>
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.4.0</version>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.1.2.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.74</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- RedisTemplate-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>2.1.2.RELEASE</version>
-            <exclusions>
-                <!-- 排除lettuce包 -->
-                <exclusion>
-                    <groupId>io.lettuce</groupId>
-                    <artifactId>lettuce-core</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.alicp.jetcache</groupId>
-            <artifactId>jetcache-anno</artifactId>
-            <version>2.5.15</version>
+            <groupId>org.apache.skywalking</groupId>
+            <artifactId>apm-toolkit-logback-1.x</artifactId>
+            <version>8.2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.alicp.jetcache</groupId>
-            <artifactId>jetcache-redis</artifactId>
-            <version>2.5.15</version>
+            <groupId>cn.zqmy</groupId>
+            <artifactId>monkey-common</artifactId>
+            <version>${monkey-tool.version}</version>
         </dependency>
-
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.zqmy</groupId>
+            <artifactId>monkey-requestbody-cache-filter</artifactId>
+            <version>${monkey-tool.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.zqmy</groupId>
+            <artifactId>monkey-notification</artifactId>
+            <version>${monkey-tool.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
