添加api版本注解和基础核心组件模块到父pom

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>monkey-common</module>
+        <module>monkey-core</module>
+        <module>monkey-apiversion</module>
         <module>monkey-notification</module>
         <module>monkey-log</module>
         <module>monkey-http</module>
