--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.zqmy</groupId>
     <artifactId>monkey-tool</artifactId>
-    <version>0.5.1-SNAPSHOT</version>
+    <version>0.6.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -21,6 +21,7 @@
         <module>monkey-idempotent</module>
         <module>monkey-requestbody-cache</module>
         <module>monkey-async-task-manager</module>
+        <module>monkey-mybatis</module>
     </modules>
 
     <properties>
@@ -48,7 +49,7 @@
         <mybatis.version>1.3.2</mybatis.version>
         <pagehelper.version>1.2.5</pagehelper.version>
         <druid.version>1.1.1</druid.version>
-        <monkey-tool.version>0.5.1-SNAPSHOT</monkey-tool.version>
+        <monkey-tool.version>0.6.0-SNAPSHOT</monkey-tool.version>
         <jetcache.latest.version>2.5.15</jetcache.latest.version>
         <dingtalk-service.version>1.0.1</dingtalk-service.version>
     </properties>
